# camera_extrinsic_cal

./: CMakeLists.txt  DialogExtrinsic.cpp  DialogExtrinsic_offsetAdded.cpp  README.md
